Setup sliders for carrier envelope and modulator envelope

--- a/index.html
+++ b/index.html
@@ -7,13 +7,18 @@
     <body>
             <div class="container-outer">
                     <div class="flex-item">
-                  
                     </div>
                     <div class="flex-item">
-                      <input id='attack' min=0 max=10 step="0.01" type="range">
-                      <input id='decay' min=0 max=10 type="range">
-                      <input id='sustain' min=0 max=10 type="range">
-                      <input id='release' min=0 max=10 type="range">
+                      <input id="carrier_attack_1" min=0.01 max=1 step="0.01" type="range">
+                      <input id="carrier_decay_1" min=0.01 max=1 step="0.01" type="range">
+                      <input id="carrier_sustain_1" min=0.01 max=1 step="0.01" type="range">
+                      <input id="carrier_release_1" min=0.01 max=1 step="0.01" type="range">
+                    </div>
+                    <div class="flex-item">
+                      <input id="modulator_attack_1" min=0.01 max=1 step="0.01" type="range">
+                      <input id="modulator_decay_1" min=0.01 max=1 step="0.01" type="range">
+                      <input id="modulator_sustain_1" min=0.01 max=1 step="0.01" type="range">
+                      <input id="modulator_release_1" min=0.01 max=1 step="0.01" type="range">
                     </div>
                     <div class="flex-item">
                         <div class="keyboard-flex-black">
